--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -808,7 +808,8 @@ body {
   .dropdown-menu button.mcs-accordion-btn{
     width: 100%;
     margin: 0px;
-    padding: 5px;
+    padding: 10px;
+    font-size: 16px;
   }
   .map-toolbar-sec button.mcs-accordion-btn{
     background-color: transparent;
@@ -831,6 +832,8 @@ body {
   .map-toolbar-sec .mcs-district-accordion-body{
     padding-top: 0px;
     padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .map-toolbar-sec .mcs-district-accordion-body button{
     background-color: transparent;
@@ -882,6 +885,7 @@ body {
   }
   .mc-selector-main .accordion{
     width: 12vw;
+    border: none;
   }
   .menu-fixed::-webkit-scrollbar-track,.layers-selector-dropdown::-webkit-scrollbar-track{
       -webkit-box-shadow: inset 0 0 6px white;
@@ -902,8 +906,18 @@ body {
     color: white;
     background-color: #005f86 !important;
   }
+  li.btn-district-btn:hover,.menu-fixed li.btn:hover{
+    background-color: #004561;
+    color: white;
+  }
+  .tool-btn.show{
+    background-color: #004561;
+  }
   .dropdown-menu-block.show{
     display: block;
+  }
+  h2.accordion-header{
+    line-height: 0px;
   }
   .display-inline{
     display: inline-flex;
@@ -913,6 +927,34 @@ body {
   }
   .label-left .form-check-input{
     float: right;
+  }
+  .options-section .accordion{
+    padding: 0px;
+  }
+  .options-section .accordion-button{
+    margin: 0px;
+    background-color: white;
+  }
+  .dropdown-menu button.mcs-accordion-btn:focus,.options-section .accordion-button:focus{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+  }
+  .dropdown-menu button.mcs-accordion-btn{
+    border-bottom: 2px solid #005f86;
+  }
+  .dropdown-menu button.mcs-accordion-btn.collapsed{
+    border-bottom: none;
+  }
+  .layers-selector-dropdown{
+    width: 20vw;
+  }
+  .mcs-dropdown-menu{
+    background-color: transparent;
+    border: none;
+  }
+  .options-section h3.dashboard-h3{
+    font-size: 15px;
   }
   @media(max-width:1440px){
     .sidebar-details-col{
